css/style.css
/* ... */
.liste_nav a:visited{
    color: black;
    text-decoration: none;
}
.liste_nav a{
    text-decoration: none;
    font-size: 19px;
    padding-top: 48px;
    margin-left: 67px;
    color: #0065FC;
}
.liste_nav a:hover{
    border-top: 2px #0065FC solid;
    color: #0065FC;
    text-decoration: none;
}
p {
    color: black;
}
.container_outils_recherche{
    /* Ici on dispose le titre principal de la page et son texte associé, 
    puis les éléments de recherche; la barre de recherche par ville avec son champ de saisie,
    les filtres par catégorie puis les infos supplémentaires.
    Les boutons de catégorie de filtres affiche un fond de couleur différente au survol. 
    Les différents conteneurs sont disposés en colonne et les éléments contenus eux sont disposés en ligne. */
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}
.container_outils_recherche h1{
    font-weight: 700;
    font-size: 22px;
    line-height: 25.83px;

}
.container_outils_recherche p{
    font-weight: 400;
    font-size: 16px;
    line-height: 18.78px;
    padding-top: 8px;
}
.container_barre_recherche{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: 49px;
    font-size: 18px;
    font-weight: 700;
    line-height: 21.13px;
    text-align: center;
    padding-top: 20px;
    padding-bottom: 32px;
}
.bouton_geoloc{
    background-color: #F2F2F2;
    width: 50px;
    height: 49px;
    border-radius: 15px 0px 0px 15px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.bouton_geoloc i{
    width:14px;
    height:18px;
}
.champ_recherche_ville {
    border: 1px #F2F2F2 solid;
    height:47px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.bouton_recherche{
    background-color: #0065FC;
    height: 49px;
    width: 132px;
    border-radius: 0px 15px 15px 0px;
    border-color: #0065FC;
    color: white;
    font-size: 18px;
    line-height: 21.13px;
    text-align: center;
}
.bouton_recherche i {
    display: none;
}
.champ_recherche_ville p input {
    border:none;
    height:48px;
    margin:17px;
}
#lieu::placeholder{
    color:black;
    font-size: 18px;
    font-weight: bold;
}
.container_filtres{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: 50px;
    width: 914px;
    padding-left: 7px;
    font-weight: 700;
}
.container_filtres h2{
    width: 54px;
    height: 21px;
    font-size: 18px;
    line-height: 21.13px;
    text-align: center;
    padding-right: 42px;
}
.bouton_filtre {
    display: inline-flex;
    flex-direction: row;
    align-items: center;
    border-radius: 25px;
    height: 50px;
    margin-left: 10px;
    border: 2px solid;
    border-color: #D9D9D9;
}
.boutons_filtre div p{
    font-size: 17px;
    font-weight: bold;
    line-height: 19.96px;
    margin-bottom: 20px;
    margin-right: 10px;
}
.boutons_filtre div i{
    margin-right: 10px;
    margin-left: 20px;
    margin-bottom: -5px;
}
.fa-person {
    margin-right: 4.86px;
}
.bouton_filtre:hover {
    background-color: #DEEBFF;
}
.container_info_sup {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding-left: 14px;
    padding-top: 25px;
}
.container_info_sup i{
    margin-right: 21px;
}
.section_articles_hebergements{
    /* Ici on dispose les 2 conteneurs "Hébergements à 'ville recherchée'" (ici Marseille pour l'exemple) 
    et "Les plus populaires" côte à côte, le second étant plus serré sur la droite. Les deux sont sur fond gris et disposes leurs éléments contenus en colonne.
    Les cartes contenues sont sur fond blanc avec un effet d'ombrage pour une meilleure lecture. 
    Toute les cartes accueillent un lien sur l'ensemble du conteneur "Card" (vide pour cette première version) vers la page du logement/activité en question.
    Pour ce faire nous avons besoin d'une position relative pour la carte et absolue pour le lien. */
    display: flex;
}
.section_hebergements_ville{
    /* Les cartes contenus sont disposées sur 2 lignes pour un affichage harmonieux. */
    width: 880px;
    height: 626px;
    background-color: #F2F2F2;
    border-radius: 20px;
    margin-right: 40px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}
.section_hebergements_ville h2{
    padding-left: 40px;
    margin-top: 42px;
    margin-bottom: 13px;
}
.bouton_afficher {
    margin-left: 44px;
} 
.articles_hebergements_ville {
    width: 800px;
    max-width: 800px;
    height: 428px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-content: space-between;
    align-self: center;
}
.container_articles_populaires {
    width: 420px;
    height: 625px;
    background-color: #F2F2F2;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
}
.container_h2_logo{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-left: 37px;
    margin-right: 42px;
}
.articles_populaires {
    width: 343px;
    height: 498px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-self: center;
}
.card {
    /* Voici nos premières cartes, celles des logements recherchés par ville. 
    Toutes les cartes sont relativements similaires, mais les réglages varient un peu selon le conteneur pour mieux s'intégrer dans la mise en page.
    Pour celles-ci, On affiche le tout en colonne, en commençant par l'image du logement qui prendra toute la largeur disponible moins la marge, 
    suivi du titre du logement, du descriptif puis enfin de la notation réprésentées par des étoiles bleus et grise*/
    width: 246px;
    height: 199px;
    max-height: 199px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 15px;
    background-color: white;
    display: flex;
    flex-direction: column;
    font-size: 16px;
    position: relative;
}
/* ... */

